fixed home-col issue on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -411,6 +411,10 @@ a:focus, .menu-button:focus, .btn-default:focus {
         margin-right: auto;
     }
 
+    .home-col:last-child {
+        margin-right: auto;
+    }
+
     .fat-footer {
         display: none;
     }
